# docker-base-images

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .ocamlformat  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  base-images.opam  base-images.opam.template  builds.expected  docker-compose.yml  dune  dune-project  known_hosts  prometheus.yml  stack.yml
docker/: README.md
docker/worker/: Dockerfile
dot_docker/contexts/meta/88d31929235bab732ab9a41c1391939cea46ee9ea21499219358fcff7cac6689/: meta.json
dot_docker/contexts/meta/e438d493f70e39a3b0bd0512d8c5ae37bd1d8a51a06223669a55e29b6b429dd6/: meta.json
dot_docker/contexts/meta/e4802934724e3ea41ce60b3bc8e109aa290bbfc37cb056296145c98acb0a00da/: meta.json
dot_docker/contexts/meta/f69162950f235e3cdbbad33f1f912d1a504be90d8a37d002c735d6f3e3882265/: meta.json
dot_docker/contexts/tls/e438d493f70e39a3b0bd0512d8c5ae37bd1d8a51a06223669a55e29b6b429dd6/docker/: ca.pem  cert.pem  key.pem
src/: base_images.ml  conf.ml  dump.ml  dump.mli  dune  git_repositories.ml  git_repositories.mli  index.ml  index.mli  logging.ml  metrics.ml  metrics.mli  pipeline.ml  pipeline.mli  s.ml  tag.ml  tag.mli  win_ver.ml  win_ver.mli
