(executable
 (public_name base-images)
 (name base_images)
 (libraries
  capnp-rpc-unix
  current
  current_docker
  current_git
  current_github
  current_ocluster
  current_rpc
  current_slack
  current_web
  dockerfile-opam
  fmt.cli
  logs.cli
  lwt.unix
  prometheus-app.unix
  str
  timedesc)
 (preprocess
  (pps ppx_deriving_yojson)))
