(executable
 (public_name base-images)
 (name base_images)
 (libraries
  current
  current.cache
  current_web
  current_docker
  current_slack
  current_git
  current_github
  current_ocluster
  current_rpc
  capnp-rpc-unix
  dockerfile-opam
  eio
  eio_main
  prometheus-app.unix
  fmt.cli
  fmt.tty
  logs.cli
  logs.fmt
  timedesc
  opam-core)
 (preprocess
  (pps ppx_deriving_yojson)))
